home page image

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Syndika Labs - AI & Web3 Innovation</title>
     <meta name="description" content="Leading research lab building cutting-edge AI and Web3 products. Engineering the future of decentralized intelligence." />
     <meta name="author" content="Syndika Labs" />
-    <meta property="og:image" content="/og-image-update.png" />
+    <meta property="og:image" content="/syndika-p.png" />
   </head>
 
   <body>
